Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38706

Missing windows styles in mingw482-4.8.6 package

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.8.6
    • 4.8.6
    • None
    • 1. Windows 7 SP1, Qt 4.8.6, MinGW-w64 (GCC 4.8.2)
      2. Windows 7 SP1, Qt 4.8.5, MinGW (GCC 4.6.2)
      3. Windows XP SP3, Qt 4.8.6, MinGW-w64 (GCC 4.8.2)
      4. Windows XP SP3, Qt 4.8.5, MinGW (GCC 4.6.2)

      I tried move my application from the Qt 4.8.5 to Qt 4.8.6 and saw that my app looks not natively on Windows 7 and Windows XP.

      Application of a kit of Qt 4.8.6 (assistant.exe, designer.exe, linguist.exe etc.) not looks natively too in my OS's. But the same applications looks natively of Qt 4.8.5 kit.

      I have not found a solution to this problem. But I found a mention that bug exists in official Qt blog (two users wrote about a similar situation with Qt 4.8.6 MinGW-release).

      Any application built using Qt 4.8.6 looks in my systems do not natively (see screenshot).

      I use qt-opensource-windows-x86-mingw482-4.8.6.exe, downloaded from the official site. And I downloaded and installed i686-4.8.2-release-posix-dwarf-rt_v3-rev3.7z (MinGW-w64) from link in the Qt 4.8.6 installer.

        1. capture_001_01052014_181746.png
          2 kB
          mero
        2. Untitled-2.png
          144 kB
          Sergei Kolesnikov
        For Gerrit Dashboard: QTBUG-38706
        # Subject Branch Project Status CR V

            aksalova Akseli Salovaara
            exl Sergei Kolesnikov
            Votes:
            11 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes